CDOC-268: docker image build for auth, rp and mock server